@@ -1476,7 +1476,7 @@
 #^sectors-1
 <div class="sector_vocab">
 	<div class="header">
-		OECD DAC CRS 5 digit <span class="count">( {_it./sector-1.length||no_length} )</span>
+		OECD DAC CRS 5 digit<span class="type">{_it./sector-1.0.@vocabulary||}</span><span class="count">( {_it./sector-1.length||no_length} )</span>
 	</div>
 	<div class="subheader">{_it./sector-1.0.@vocabulary-description||} <a href="{_it./sector-1.0.@vocabulary-url}" target="_blank">{_it./sector-1.0.@vocabulary-url}</a></div>
 	{_it./sector-1:/sector_dac||}
@@ -1486,7 +1486,7 @@
 #^sectors-2
 <div class="sector_vocab">
 	<div class="header">
-		OECD DAC CRS 3 digit <span class="count">( {_it./sector-2.length||no_length} )</span>
+		OECD DAC CRS 3 digit<span class="type">{_it./sector-2.0.@vocabulary||}</span><span class="count">( {_it./sector-2.length||no_length} )</span>
 	</div>
 	<div class="subheader">{_it./sector-2.0.@vocabulary-description||} <a href="{_it./sector-2.0.@vocabulary-url}" target="_blank">{_it./sector-2.0.@vocabulary-url}</a></div>
 	{_it./sector-2:/sector_dac||}
@@ -1496,7 +1496,7 @@
 #^sectors-3
 <div class="sector_vocab">
 	<div class="header">
-		Classification of the Functions of Government (UN) <span class="count">( {_it./sector-3.length||no_length} )</span>
+		Classification of the Functions of Government (UN)<span class="type">{_it./sector-3.0.@vocabulary||}</span><span class="count">( {_it./sector-3.length||no_length} )</span>
 	</div>
 	<div class="subheader">{_it./sector-3.0.@vocabulary-description||} <a href="{_it./sector-3.0.@vocabulary-url}" target="_blank">{_it./sector-3.0.@vocabulary-url}</a></div>
 	{_it./sector-3:/sector||}
@@ -1504,7 +1504,7 @@
 #^sectors-4
 <div class="sector_vocab">
 	<div class="header">
-		Statistical classification of economic activities in the European Community <span class="count">( {_it./sector-4.length||no_length} )</span>
+		Statistical classification of economic activities in the European Community<span class="type">{_it./sector-4.0.@vocabulary||}</span><span class="count">( {_it./sector-4.length||no_length} )</span>
 	</div>
 	<div class="subheader">{_it./sector-4.0.@vocabulary-description||} <a href="{_it./sector-4.0.@vocabulary-url}" target="_blank">{_it./sector-4.0.@vocabulary-url}</a></div>
 	{_it./sector-4:/sector||}
@@ -1512,7 +1512,7 @@
 #^sectors-5
 <div class="sector_vocab">
 	<div class="header">
-		National Taxonomy for Exempt Entities (USA) <span class="count">( {_it./sector-5.length||no_length} )</span>
+		National Taxonomy for Exempt Entities (USA)<span class="type">{_it./sector-5.0.@vocabulary||}</span><span class="count">( {_it./sector-5.length||no_length} )</span>
 	</div>
 	<div class="subheader">{_it./sector-5.0.@vocabulary-description||} <a href="{_it./sector-5.0.@vocabulary-url}" target="_blank">{_it./sector-5.0.@vocabulary-url}</a></div>
 	{_it./sector-5:/sector||}
@@ -1520,7 +1520,7 @@
 #^sectors-6
 <div class="sector_vocab">
 	<div class="header">
-		AidData <span class="count">( {_it./sector-6.length||no_length} )</span>
+		AidData<span class="type">{_it./sector-6.0.@vocabulary||}</span><span class="count">( {_it./sector-6.length||no_length} )</span>
 	</div>
 	<div class="subheader">{_it./sector-6.0.@vocabulary-description||}</div>
 	{_it./sector-6:/sector||}
@@ -1528,7 +1528,7 @@
 #^sectors-7
 <div class="sector_vocab">
 	<div class="header">
-		SDG Goal <span class="count">( {_it./sector-7.length||no_length} )</span>
+		SDG Goal<span class="type">{_it./sector-7.0.@vocabulary||}</span><span class="count">( {_it./sector-7.length||no_length} )</span>
 	</div>
 	<div class="subheader">{_it./sector-7.0.@vocabulary-description||} <a href="{_it./sector-7.0.@vocabulary-url}" target="_blank">{_it./sector-7.0.@vocabulary-url}</a></div>
 	{_it./sector-7:/sector||}
@@ -1536,7 +1536,7 @@
 #^sectors-8
 <div class="sector_vocab">
 	<div class="header">
-		SDG Target <span class="count">( {_it./sector-8.length||no_length} )</span>
+		SDG Target<span class="type">{_it./sector-8.0.@vocabulary||}</span><span class="count">( {_it./sector-8.length||no_length} )</span>
 	</div>
 	<div class="subheader">{_it./sector-8.0.@vocabulary-description||} <a href="{_it./sector-8.0.@vocabulary-url}" target="_blank">{_it./sector-8.0.@vocabulary-url}</a></div>
 	{_it./sector-8:/sector||}
@@ -1544,7 +1544,7 @@
 #^sectors-9
 <div class="sector_vocab">
 	<div class="header">
-		SDG Indicator <span class="count">( {_it./sector-9.length||no_length} )</span>
+		SDG Indicator<span class="type">{_it./sector-9.0.@vocabulary||}</span><span class="count">( {_it./sector-9.length||no_length} )</span>
 	</div>
 	<div class="subheader">{_it./sector-9.0.@vocabulary-description||} <a href="{_it./sector-9.0.@vocabulary-url}" target="_blank">{_it./sector-9.0.@vocabulary-url}</a></div>
 	{_it./sector-9:/sector||}
@@ -1552,7 +1552,7 @@
 #^sectors-10
 <div class="sector_vocab">
 	<div class="header">
-		Humanitarian Global Clusters (Inter-Agency Standing Committee) <span class="count">( {_it./sector-10.length||no_length} )</span>
+		Humanitarian Global Clusters (Inter-Agency Standing Committee)<span class="type">{_it./sector-10.0.@vocabulary||}</span><span class="count">( {_it./sector-10.length||no_length} )</span>
 	</div>
 	<div class="subheader">{_it./sector-10.0.@vocabulary-description||} <a href="{_it./sector-10.0.@vocabulary-url}" target="_blank">{_it./sector-10.0.@vocabulary-url}</a></div>
 	{_it./sector-10:/sector||}
@@ -1560,7 +1560,7 @@
 #^sectors-11
 <div class="sector_vocab">
 	<div class="header">
-		North American Industry Classification System (NAICS) <span class="count">( {_it./sector-11.length||no_length} )</span>
+		North American Industry Classification System (NAICS)<span class="type">{_it./sector-11.0.@vocabulary||}</span><span class="count">( {_it./sector-11.length||no_length} )</span>
 	</div>
 	<div class="subheader">{_it./sector-11.0.@vocabulary-description||} <a href="{_it./sector-11.0.@vocabulary-url}" target="_blank">{_it./sector-11.0.@vocabulary-url}</a></div>
 	{_it./sector-11:/sector||}
@@ -1568,7 +1568,7 @@
 #^sectors-12
 <div class="sector_vocab">
 	<div class="header">
-		UN System Function <span class="count">( {_it./sector-12.length||no_length} )</span>
+		UN System Function<span class="type">{_it./sector-12.0.@vocabulary||}</span><span class="count">( {_it./sector-12.length||no_length} )</span>
 	</div>
 	<div class="subheader">{_it./sector-12.0.@vocabulary-description||} <a href="{_it./sector-12.0.@vocabulary-url}" target="_blank">{_it./sector-12.0.@vocabulary-url}</a></div>
 	{_it./sector-12:/sector||}
@@ -1576,7 +1576,7 @@
 #^sectors-99
 <div class="sector_vocab">
 	<div class="header">
-		Reporting Organisation <span class="count">( {_it./sector-99.length||no_length} )</span>
+		Reporting Organisation<span class="type">{_it./sector-99.0.@vocabulary||}</span><span class="count">( {_it./sector-99.length||no_length} )</span>
 	</div>
 	<div class="subheader">{_it./sector-99.0.@vocabulary-description||}{_it./sector-99.0.@vocabulary-uri&&_it:sectors-vocab-uri-99||}</div>
 	{_it./sector-99:/sector||}
@@ -1584,7 +1584,7 @@
 #^sectors-98
 <div class="sector_vocab">
 	<div class="header">
-		Reporting Organisation 2 <span class="count">( {_it./sector-98.length||no_length} )</span>
+		Reporting Organisation 2<span class="type">{_it./sector-98.0.@vocabulary||}</span><span class="count">( {_it./sector-98.length||no_length} )</span>
 	</div>
 	<div class="subheader">{_it./sector-98.0.@vocabulary-description||}{_it./sector-98.0.@vocabulary-uri&&_it:sectors-vocab-uri-98||}</div>
 	{_it./sector-98:/sector||}
