@@ -1,6 +1,8 @@
 Development Portal (2021-12-07 shi)
 ==============================
 Add sector vocab 12 to SAVi
+Fix period column font size for results
+Display sector vocab code
 
 
 Development Portal (2021-12-02 shi)
